Fix reaction bar stretching full width
Replace width: fit-content with align-self: flex-start to prevent
the flex column parent (.message-content) from stretching the
reaction bar to full width.

--- a/messages/css/messages.css
+++ b/messages/css/messages.css
@@ -633,7 +633,7 @@ html, body {
     margin-left: 10px;
     position: relative;
     z-index: 1;
-    width: fit-content;
+    align-self: flex-start;
 }
 
 .reaction {
